Modify project title and team member in index.html
Updated project title and team member details.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <div class="card">
         <div class="project-title">
-            🚗 AUTOSAR Vehicle Speed Monitoring ECU
+            🚗 Automated Testing of Car Service & Maintenance Reminder App
         </div>
 
         <div class="project-desc">
@@ -88,16 +88,15 @@
 
         <div class="divider"></div>
 
-        <h2>👥 Team Members</h2>
+        <h2>Team Lead</h2>
 
         <div class="member">55926 – Konijeti Yamini</div>
-        <div class="member">57152 – Abhishek Suman</div>
-        <div class="member">55923 – Gaddam Pavithra</div>
-        <div class="member">55903 – Lokesh Prabhu</div>
-        <div class="member">55913 – Himaja Sudha</div>
+       
+       
     </div>
 
 </body>
 
 </html>
+
 
